<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303A75"
    tools:context=".ControlActivity">

    <RelativeLayout
        android:id="@+id/elBluet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/bluetooth"
        android:layout_marginTop="0dp"
        >
        <TextView
            android:id="@+id/Ellaw"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/ellaw"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginTop="25dp"/>

        <LinearLayout
            android:id="@+id/divLed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/Ellaw"
            android:gravity="center">

            <Button
                android:id="@+id/control_led_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/on" />

            <Button
                android:id="@+id/control_led_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_below="@+id/divLed"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"/>

    </RelativeLayout>


    <Button
        android:id="@+id/btnHorario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/elBluet"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/horario"/>

    <Button
        android:id="@+id/btnBarrer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#950101"
        android:text="@string/barrer"
        android:layout_below="@+id/btnHorario"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        />

    <ImageView
        android:id="@+id/bluetooth"
        android:layout_width="0dp"
        android:layout_height="251dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/bluetooth" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="179dp"
        android:layout_height="131dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="35dp"
        app:srcCompat="@drawable/elaw" />


    <!--    <ImageView-->
<!--        android:id="@+id/imageView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="216dp" />-->

</RelativeLayout>